gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail10980.d
version https://git-lfs.github.com/spec/v1
oid sha256:f84c77d41f8156541ca11cb814edd7b32ca3f9ec59fba0f36c94bcda85ba9782
size 1682
